@@ -12,8 +12,8 @@ ares_build.h
 ares_version.h.dist
 autom4te.cache
 config.guess
-config.h
-config.h.in
+ares_config.h
+ares_config.h.in
 config.log
 config.lt
 config.status
